# routers/images_router.go
@@ -5,7 +5,9 @@ import "gvb_server/api"
 func (router RouterGroup) ImagesRouter() {
 	app := api.ApiGroupApp.ImagesApi
 	router.GET("images", app.ImageListView)
+	router.GET("image_names", app.ImageNameListView)
 	router.POST("images", app.ImageUploadView)
 	router.DELETE("images", app.ImageRemoveView)
 	router.PUT("images", app.ImageUpdateView)
+
 }
